feat(authority): Extend Authority with additional fields (#377)
* feat(authority): Extend Authority with additional fields

- Extend authority with chronTerm, mediumPerfTerm, generalSubdivision, geographicSubdivision, chronSubdivision, formSubdivision
- Extend authority with "Trunc" versions of fields + namedEventTrunc

Implements: MODELINKS-117

* Update dependencies